--- a/src/index.css
+++ b/src/index.css
@@ -34,4 +34,8 @@
   .storybook-button--large {
     @apply text-base px-4 py-3;
   }
+
+  .main-button {
+    @apply inline-flex justify-center items-center py-3 px-6 w-full text-base font-medium text-white bg-main hover:bg-orange-600 rounded-md border border-transparent focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 shadow-sm focus:outline-none;
+  }
 }
